# weekbullet

./: .gitignore  README.md  pyproject.toml  weekbullet.skill.md
weekbullet/: __init__.py  backup.py  cli.py  editor.py  formatter.py  init.py  maintain.py  model.py  parser.py  renderer.py  sorter.py
