[project]
name = "weekbullet"
version = "0.1.0"
description = "週記 CLI 管理工具"
requires-python = ">=3.10"
dependencies = ["click"]

[project.scripts]
weekbullet = "weekbullet.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["weekbullet*"]
